--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
+    "socket.io-client": "^4.7.4",
     "validator": "^13.11.0"
   },
   "devDependencies": {
