--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
-    "expo": "~50.0.6",
-    "expo-camera": "^14.0.4",
+    "expo": "~50.0.7",
+    "expo-camera": "~14.0.5",
     "expo-image-picker": "^14.7.1",
-    "expo-linear-gradient": "^12.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
