--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-camera": "~14.0.5",
+    "expo-document-picker": "^11.10.1",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
