--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-vector-icons": "^10.0.3",
     "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.7.4",
+    "socketio-file-upload": "^0.7.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
