--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
-    "buffer": "^6.0.3",
     "expo": "~50.0.7",
     "expo-camera": "~14.0.5",
     "expo-document-picker": "^11.10.1",
+    "expo-file-system": "^16.0.8",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
+    "expo-sharing": "^11.10.0",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -41,7 +42,6 @@
     "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
-    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.7.4",
     "socketio-file-upload": "^0.7.3",
     "validator": "^13.11.0"
