--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "expo": "~50.0.7",
     "expo-camera": "^14.1.2",
     "expo-document-picker": "^11.10.1",
