--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/slider": "^4.5.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
@@ -22,11 +23,14 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "expo": "~50.0.7",
+    "expo-barcode-scanner": "^12.9.3",
     "expo-camera": "^14.1.2",
     "expo-document-picker": "^11.10.1",
     "expo-file-system": "^16.0.8",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
+    "expo-media-library": "^15.9.2",
+    "expo-permissions": "^14.4.0",
     "expo-sharing": "^11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
