--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-native-community/slider": "^4.5.2",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
@@ -22,17 +22,17 @@
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
-    "expo": "~50.0.7",
-    "expo-camera": "^14.1.2",
+    "expo": "~50.0.17",
+    "expo-camera": "~14.1.3",
     "expo-document-picker": "^11.10.1",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-sharing": "^11.10.0",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.10",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.14.0",
@@ -47,7 +47,8 @@
     "react-native-vector-icons": "^10.0.3",
     "socket.io-client": "^4.7.4",
     "socketio-file-upload": "^0.7.3",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "expo-av": "~13.10.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
