--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "expo": "~50.0.17",
+    "expo-av": "~13.10.6",
     "expo-camera": "~14.1.3",
     "expo-document-picker": "^11.10.1",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
+    "expo-media-library": "^15.9.2",
     "expo-sharing": "^11.10.0",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
@@ -47,8 +49,7 @@
     "react-native-vector-icons": "^10.0.3",
     "socket.io-client": "^4.7.4",
     "socketio-file-upload": "^0.7.3",
-    "validator": "^13.11.0",
-    "expo-av": "~13.10.6"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
