--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "react-native-otp-entry": "^1.4.1",
     "react-native-pagination": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
